--- a/views/login.jade
+++ b/views/login.jade
@@ -4,6 +4,7 @@ block content
   div.login-page
     div.form
       form(class="login-form" method="POST" action='/login')
+        h4 Log In 
         input(type="text" placeholder="username" class='form_control' name="username")
         input(type="password" placeholder="password" class='form_control' name="password")
         button(type='submit') Login
